# agent_samp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
agents/: base_agent.py  coordinator.py  protocol_agent.py  tool_registry.py  triage_agent.py
alembic/: env.py
api/: server.py
core/: cache.py  context.py  guardrails.py  llm_backend.py  llm_client.py  memory.py  metrics.py  prompt_template.py  tools.py  tracing.py
data/knowledge_docs/: diabetes_diet.txt  fall_prevention.txt  hypertension_protocol.txt
eval/: run_eval.py  testset.jsonl
infra/: db.py  models.py  rag.py  secrets.py  session_store.py
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/modules/compute/: main.tf  outputs.tf  variables.tf
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/modules/search/: main.tf  outputs.tf  variables.tf
infrastructure/modules/sessions/: main.tf
scripts/: build_knowledge.py  init_db.py  run_agent.py  seed_data.py
services/: alert_service.py  health_service.py  knowledge_service.py
